[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/CombatScreen.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/PlayerHUD.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/DeckView.tscn" id="3"]
[ext_resource type="Texture2D" path="res://Art/backgrounds/forest_bg.png" id="4"]

[node name="CombatScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 6

[node name="RootVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerHUD" parent="RootVBox" instance=ExtResource("2")]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="RootVBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 0
alignment = 1

[node name="TurnLabel" type="Label" parent="RootVBox/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Turn 1"

[node name="Spacer" type="Control" parent="RootVBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="EndTurnButton" type="Button" parent="RootVBox/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "End Turn"

[node name="Enemies" type="HBoxContainer" parent="RootVBox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Hand" type="HBoxContainer" parent="RootVBox"]
visible = false
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
alignment = 1

[node name="TurnBanner" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "PLAYER TURN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PileControls" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DrawPile" type="Button" parent="PileControls"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -20.0
grow_vertical = 0
text = "Draw
99"

[node name="DiscardPile" type="Button" parent="PileControls"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Discard
99"

[node name="ExhaustPile" type="Button" parent="PileControls"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -80.0
offset_right = -110.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Exhaust
99"

[node name="DeckView" parent="." instance=ExtResource("3")]
unique_name_in_owner = true
visible = false
layout_mode = 1
